--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "expo": "~53.0.9",
+    "expo-haptics": "~14.1.4",
+    "expo-screen-orientation": "~8.1.6",
+    "expo-sensors": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
-    "expo-haptics": "~14.1.4",
-    "expo-sensors": "~14.1.4"
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
